--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@progress/kendo-drawing": "^1.5.12",
+    "@progress/kendo-react-gauges": "^3.4.1",
+    "@progress/kendo-react-intl": "^3.4.1",
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.3",
     "babel-eslint": "10.x",
@@ -10,7 +13,9 @@
     "babel-preset-react-app": "^9.0.1",
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
-    "chalk": "1.1.3",
+    "chalk": "^2.4.2",
+    "chrome": "^0.1.0",
+    "chrome-serialport": "^0.1.2",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
@@ -32,10 +37,13 @@
     "prop-types": "^15.7.2",
     "raf": "3.4.0",
     "react": "^16.4.1",
+    "react-d3-speedometer": "^0.7.1",
     "react-dev-utils": "^9.0.0-next.68",
     "react-dom": "^16.4.1",
     "react-frame-component": "^4.0.0",
+    "react-radial-gauge": "^0.1.1",
     "resolve": "1.6.0",
+    "serialport": "^7.1.5",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "^0.11.5",
     "url-loader": "0.6.2",
